[gd_scene load_steps=3 format=3 uid="uid://bnc7aqx5hhwki"]

[ext_resource type="Script" path="res://Scenes/game_over.gd" id="1_0th18"]
[ext_resource type="FontFile" uid="uid://bqk3nly6x4mj4" path="res://ThaleahFat.ttf" id="2_5h8mc"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_0th18")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -185.0
offset_right = 324.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0846899, 0.0846899, 0.0846899, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -81.5
offset_right = 121.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_5h8mc")
theme_override_font_sizes/font_size = 48
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_5h8mc")
theme_override_font_sizes/font_size = 32
text = "...Continue?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="YesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.67451, 0.67451, 0.67451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.67451, 0.67451, 0.67451, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5h8mc")
theme_override_font_sizes/font_size = 36
text = "Yes"
flat = true

[node name="NoButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.67451, 0.67451, 0.67451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.67451, 0.67451, 0.67451, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5h8mc")
theme_override_font_sizes/font_size = 36
text = "No"
flat = true

[connection signal="button_down" from="VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_button_down"]
